--- a/app/views/job_orders/edit.html.erb
+++ b/app/views/job_orders/edit.html.erb
@@ -1,5 +1,8 @@
 <% content_for :page_title do %>
-<%= @job_order.code %>
+<%= job_order_link(@job_order) %>
+<% end %>
+<% content_for :page_sub_title do %>
+Edit Job Order
 <% end %>
 
 <%= render 'form' %>
