--- a/app/views/job_orders/show.html.erb
+++ b/app/views/job_orders/show.html.erb
@@ -1,5 +1,8 @@
 <% content_for :page_title do %>
-<%= @job_order.code %>
+<%= job_order_link(@job_order) %>
+<% end %>
+<% content_for :page_sub_title do %>
+<%= @job_order.created_at_display %>
 <% end %>
 
 <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
@@ -10,58 +13,46 @@
 
 <div class="row">
   <div class="col m8 s12">
-    <div class="row">
-      <div class="col m3">
+    <div class="details row">
+      <div class="col s12">
         <div class="row">
-          <div class="col s12">
+          <div class="col m3 s4">
             <strong>MBL/MAWB No. :</strong>
           </div>
+          <div class="col m9 s8">
+            <%= @job_order.bill.master_reference_number_display %>
+          </div>
         </div>
         <div class="row">
-          <div class="col s12">
+          <div class="col m3 s4">
             <strong>HBL/HAWB No. :</strong>
           </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            <strong>Client :</strong>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            <strong>Shipper :</strong>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
-            <strong>Consignee :</strong>
-          </div>
-        </div>
-      </div>
-      <div class="col m9">
-        <div class="row">
-          <div class="col s12">
-            <%= @job_order.bill.master_reference_number %>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col s12">
+          <div class="col m9 s8">
             <%= @job_order.bill.reference_number_display %>
           </div>
         </div>
         <div class="row">
-          <div class="col s12">
-            <%= @job_order.client_name_display %>
+          <div class="col m3 s4">
+            <strong>Client :</strong>
+          </div>
+          <div class="col m9 s8">
+            <%= name_link(@job_order.client) %>
           </div>
         </div>
         <div class="row">
-          <div class="col s12">
-            <%= @job_order.shipper_name_display %>
+          <div class="col m3 s4">
+            <strong>Shipper :</strong>
+          </div>
+          <div class="col m9 s8">
+            <%= name_link(@job_order.bill.shipper) %>
           </div>
         </div>
         <div class="row">
-          <div class="col s12">
-            <%= @job_order.consignee_name_display %>
+          <div class="col m3 s4">
+            <strong>Consignee :</strong>
+          </div>
+          <div class="col m9 s8">
+            <%= name_link(@job_order.bill.consignee) %>
           </div>
         </div>
       </div>
@@ -72,44 +63,44 @@
           <div class="row">
             <div class="col m7 s12">
               <div class="row">
-                <div class="col s6">
-                  <strong>Shipping Lines/Airlines/Co-loader:</strong>
+                <div class="col s5">
+                  <strong>Shipping Lines/Airlines/Co-loader :</strong>
                 </div>
-                <div class="col s6">
+                <div class="col s7">
                   <%= @job_order.bill.carrier_display %>
                 </div>
               </div>
               <div class="row">
-                <div class="col s6">
-                  <strong>Aircraft/Vessel:</strong>
+                <div class="col s5">
+                  <strong>Aircraft/Vessel :</strong>
                 </div>
-                <div class="col s6">
+                <div class="col s7">
                   <%= @job_order.bill.carrier_name_display %>
                 </div>
               </div>
               <div class="row">
-                <div class="col s6">
-                  <strong>Location:</strong>
+                <div class="col s5">
+                  <strong>Location :</strong>
                 </div>
-                <div class="col s6">
+                <div class="col s7">
                   <%= @job_order.bill.location_display %>
                 </div>
               </div>
             </div>
             <div class="col m5 s12">
               <div class="row">
-                <div class="col s6">
-                  <strong>Destination:</strong>
+                <div class="col s5">
+                  <strong>Destination :</strong>
                 </div>
-                <div class="col s6">
+                <div class="col s7">
                   <%= @job_order.bill.destination_display %>
                 </div>
               </div>
               <div class="row">
-                <div class="col s6">
-                  <strong>Origin:</strong>
+                <div class="col s5">
+                  <strong>Origin :</strong>
                 </div>
-                <div class="col s6">
+                <div class="col s7">
                   <%= @job_order.bill.origin_display %>
                 </div>
               </div>
@@ -119,22 +110,43 @@
       </div>
     </div>
     <div class="row">
-      <div class="col m6 s12">
-        <strong>Description of goods</strong>
+      <div class="col m12 s12">
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">Description of goods</span>
+            <p><%= @job_order.bill.description_display %></p>
+          </div>
+        </div>
       </div>
     </div>
-    <hr>
+
+    <% if @expense_line_items.present? %>
     <div class="row">
-      <div class="col m6 s12">
-        <%= @job_order.bill.description_display %>
+      <div class="col s12">
+        <div id="expenses-card" class="card">
+          <div class="card-content">
+            <span class="card-title">
+              Expenses
+              <a class="btn-floating waves-effect waves-light red right" href="<%= edit_job_order_expense_path(@job_order, @expense) %>">
+              <i class="medium material-icons">mode_edit</i></a>
+
+            </span>
+            <p>
+              <%= render 'expense_line_items/list', expense: @expense, expense_line_items: @expense_line_items %>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
+    <% else %>
+      <%= link_to "Add Expense", new_job_order_expense_path(@job_order), class: "waves-effect waves-light btn" %>
+    <% end %>
   </div>
   <div class="col m4 s12">
     <div class="card-panel">
       <div class="row">
         <div class="col s6">
-          <strong>Invoice Number:</strong>
+          <strong>Invoice Number :</strong>
         </div>
         <div class="col s6">
           <%= @job_order.bill.invoice_number_display %>
@@ -142,7 +154,7 @@
       </div>
       <div class="row">
         <div class="col s6">
-          <strong>Invoice Value:</strong>
+          <strong>Invoice Value :</strong>
         </div>
         <div class="col s6">
           <%= @job_order.bill.invoice_value_display %>
@@ -151,7 +163,7 @@
       <hr>
       <div class="row">
         <div class="col s6">
-          <strong>Container Number:</strong>
+          <strong>Container Number :</strong>
         </div>
         <div class="col s6">
           <%= @job_order.bill.container_number_display %>
@@ -159,7 +171,7 @@
       </div>
       <div class="row">
         <div class="col s6">
-          <strong>Registry Number:</strong>
+          <strong>Registry Number :</strong>
         </div>
         <div class="col s6">
           <%= @job_order.bill.registry_number_display %>
@@ -167,7 +179,7 @@
       </div>
       <div class="row">
         <div class="col s6">
-          <strong>Port:</strong>
+          <strong>Port :</strong>
         </div>
         <div class="col s6">
           <%= @job_order.bill.port_display %>
@@ -176,7 +188,7 @@
       <hr>
       <div class="row">
         <div class="col s6">
-          <strong>Quantity:</strong>
+          <strong>Quantity :</strong>
         </div>
         <div class="col s6">
           <%= @job_order.bill.quantity_display %>
@@ -184,7 +196,7 @@
       </div>
       <div class="row">
         <div class="col s6">
-          <strong>Gross Weight:</strong>
+          <strong>Gross Weight :</strong>
         </div>
         <div class="col s6">
           <%= @job_order.bill.gross_weight_display %>
@@ -192,7 +204,7 @@
       </div>
       <div class="row">
         <div class="col s6">
-          <strong>Chargeable Weight (kg):</strong>
+          <strong>Chargeable Weight (kg) :</strong>
         </div>
         <div class="col s6">
           <%= @job_order.bill.chargeable_weight_display %>
@@ -200,7 +212,7 @@
       </div>
       <div class="row">
         <div class="col s6">
-          <strong>Measurement (cbm):</strong>
+          <strong>Measurement (cbm) :</strong>
         </div>
         <div class="col s6">
           <%= @job_order.bill.measurement_display %>
@@ -209,7 +221,7 @@
       <hr>
       <div class="row">
         <div class="col s6">
-          <strong>Arrival Date:</strong>
+          <strong>Arrival Date :</strong>
         </div>
         <div class="col s6">
           <%= @job_order.bill.arrival_date_display %>
