--- a/app/views/bills/_form_fields.html.erb
+++ b/app/views/bills/_form_fields.html.erb
@@ -52,17 +52,17 @@
   </div>
 
   <div class="input-field col m3 s6">
-    <%= f.number_field :gross_weight %>
+    <%= f.number_field :gross_weight, step: "any" %>
     <%= f.label :gross_weight %>
   </div>
 
   <div class="input-field col m3 s6">
-    <%= f.number_field :chargeable_weight %>
+    <%= f.number_field :chargeable_weight, step: "any" %>
     <%= f.label :chargeable_weight, "Chargeable Weight (kg)" %>
   </div>
 
   <div class="input-field col m3 s6">
-    <%= f.number_field :measurement %>
+    <%= f.number_field :measurement, step: "any" %>
     <%= f.label :measurement, "Measurement (cbm)" %>
   </div>
 </div>
@@ -105,14 +105,12 @@
 
 <div class="field row">
   <div class="input-field col s6">
-    <%# TODO: enabled if sea via js %>
     <%= f.text_field :invoice_number %>
     <%= f.label :invoice_number %>
   </div>
 
   <div class="input-field col s6">
-    <%# TODO: enabled if sea via js %>
-    <%= f.number_field :invoice_value %>
+    <%= f.number_field :invoice_value, step: "any" %>
     <%= f.label :invoice_value %>
   </div>
 </div>
