--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,5 +1,8 @@
 <% content_for :page_title do %>
 <%= @client.name %>
 <% end %>
+<% content_for :page_sub_title do %>
+Edit Client
+<% end %>
 
 <%= render 'form' %>
