--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -13,17 +13,16 @@
       <th>Name</th>
       <th>Contact person</th>
       <th>Contact number</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @clients.each do |client| %>
       <tr>
-        <td><%= client.name %></td>
+        <td><%= name_link(client) %></td>
         <td><%= client.contact_person %></td>
         <td><%= client.contact_number %></td>
-        <td><%= link_to 'Show', client %></td>
         <td><%= link_to 'Edit', edit_client_path(client) %></td>
         <td><%= link_to 'Destroy', client, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
