--- a/app/views/job_orders/_form.html.erb
+++ b/app/views/job_orders/_form.html.erb
@@ -19,6 +19,7 @@
         </ul>
       </div>
       <div id="service" class="col s12">
+        <% if @job_order.new_record? %>
         <div class="field row">
           <div class="col s12">
             <p>
@@ -30,10 +31,19 @@
             </p>
           </div>
         </div>
+        <% end %>
 
         <div class="field row">
           <div class="input-field col m6 s12">
-            <%= f.select :client_id, options_for_select([['Please select', 0, {disabled: "disabled"}], *@clients.map{|client| [client.name, client.id]}], @job_order.client_id || 0), {}, "data-enabled-for": "job_order_select_client_true" %>
+            <%= f.select :client_id, options_for_select(
+                [
+                  ['Please select', 0, {disabled: "disabled"}],
+                  *@clients.map{|client| [client.name, client.id]}
+                ],
+                @job_order.client_id || 0
+              ),
+              {},
+              "data-enabled-for": "job_order_select_client_true" %>
             <%= f.label :client_id %>
           </div>
         </div>
@@ -109,7 +119,7 @@
       </div>
       <div id="details" class="col s12">
         <%= f.fields_for :bill, @job_order.bill do |builder| %>
-          <%= render 'bills/bill_fields', f: builder %>
+          <%= render 'bills/form_fields', f: builder %>
         <% end %>
       </div>
     </div>
