--- a/app/views/job_orders/index.html.erb
+++ b/app/views/job_orders/index.html.erb
@@ -13,17 +13,16 @@ Job Orders
       <th>Code</th>
       <th>Client</th>
       <th>Date created</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @job_orders.each do |job_order| %>
       <tr>
-        <td><%= job_order.code %></td>
-        <td><%= job_order.client_name %></td>
+        <td><%= job_order_link(job_order) %></td>
+        <td><%= name_link(job_order.client) %></td>
         <td><%= job_order.created_at_display %></td>
-        <td><%= link_to 'Show', job_order %></td>
         <td><%= link_to 'Edit', edit_job_order_path(job_order) %></td>
         <td><%= link_to 'Destroy', job_order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
