--- a/app/views/bills/_form_fields.html.erb
+++ b/app/views/bills/_form_fields.html.erb
@@ -53,7 +53,7 @@
 
   <div class="input-field col m3 s6">
     <%= f.number_field :gross_weight, step: "any" %>
-    <%= f.label :gross_weight %>
+    <%= f.label :gross_weight, "Gross weight(kg)" %>
   </div>
 
   <div class="input-field col m3 s6">
