--- a/app/views/liquidations/_form.html.erb
+++ b/app/views/liquidations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@liquidation) do |f| %>
+<%= form_for([@job_order, @expense, @liquidation]) do |f| %>
   <% if @liquidation.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@liquidation.errors.count, "error") %> prohibited this liquidation from being saved:</h2>
@@ -11,11 +11,49 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :liquidated_by_name %><br>
-    <%= f.text_field :liquidated_by_name %>
+  <div class="row field">
+    <div class="input-field col s6">
+      <%= f.text_field :liquidated_by_name %>
+      <%= f.label :liquidated_by_name, "Liquidated By" %>
+    </div>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+
+  <div class="row">
+    <div class="col s12">
+      <ul class="tabs">
+        <li class="tab col s4"><a href="#import">Import</a></li>
+        <li class="tab col s4"><a href="#export">Export</a></li>
+        <li class="tab col s4"><a href="#other">Other</a></li>
+      </ul>
+    </div>
+    <div id="import" class="col s12">
+      <% @import_liquidation_line_items.each do |lqli| %>
+        <%= f.fields_for :import_liquidation_line_items, lqli do |builder| %>
+          <%= render "liquidation_line_items/form_fields", f: builder, lqli: lqli %>
+        <% end %>
+      <% end %>
+    </div>
+    <div id="export" class="col s12">
+      <% @export_liquidation_line_items.each do |lqli| %>
+        <%= f.fields_for :export_liquidation_line_items, lqli do |builder| %>
+          <%= render "liquidation_line_items/form_fields", f: builder, lqli: lqli %>
+        <% end %>
+      <% end %>
+    </div>
+    <div id="other" class="col s12">
+      <% @other_liquidation_line_items.each do |lqli| %>
+        <%= f.fields_for :other_liquidation_line_items, lqli do |builder| %>
+          <%= render "liquidation_line_items/form_fields", f: builder, lqli: lqli %>
+        <% end %>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="actions row">
+    <div class="col s12">
+      <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+        <i class="material-icons right">send</i>
+      </button>
+    </div>
   </div>
 <% end %>
