--- a/app/views/liquidations/edit.html.erb
+++ b/app/views/liquidations/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Liquidation</h1>
+<% content_for :page_title do %>
+<%= job_order_link(@job_order) %>
+<% end %>
+<% content_for :page_sub_title do %>
+<%= name_link(@job_order.client) %>
+<% end %>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @liquidation %> |
-<%= link_to 'Back', liquidations_path %>
