--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,10 +75,10 @@ main {
   padding-bottom: 120px;
 }
 
-// .container {
-//   width: 95.3%;
-//   max-width: 960px;
-// }
+.container {
+  width: 95.3%;
+  max-width: 1280px;
+}
 
 #after-brand-logo {
   margin-left: 140px;
@@ -132,4 +132,21 @@ h1 a i {
 
 .row {
   margin-bottom: 10px;
+}
+
+.liquidation_line_item {
+  a {
+    color: #ffab40;
+  }
+  a:hover {
+    color: #ffd180;
+  }
+}
+
+#side-actions {
+  margin-top: 0;
+}
+
+.collection-header h5 {
+  font-size: 1.2rem
 }
