--- a/app/views/job_orders/show.html.erb
+++ b/app/views/job_orders/show.html.erb
@@ -5,14 +5,8 @@
 <%= @job_order.created_at_display %>
 <% end %>
 
-<div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-  <a class="btn-floating btn-large red" href="<%= edit_job_order_path(@job_order) %>">
-    <i class="large material-icons">mode_edit</i>
-  </a>
-</div>
-
 <div class="row">
-  <div class="col m8 s12">
+  <div class="col m9 s12">
     <div class="details row">
       <div class="col s12">
         <div class="row">
@@ -131,7 +125,7 @@
               <i class="medium material-icons">mode_edit</i></a>
             </span>
             <p>
-              <%= render 'expense_line_items/list', expense: @expense, expense_line_items: @expense_line_items %>
+              <%= render 'expense_line_items/list', expense: @expense, expense_line_items: @expense_line_items, liquidation_summary: @liquidation_summary %>
             </p>
           </div>
           <div class="card-action">
@@ -144,89 +138,103 @@
       <%= link_to "Add Expense", new_job_order_expense_path(@job_order), class: "waves-effect waves-light btn" %>
     <% end %>
   </div>
-  <div class="col m4 s12">
-    <div class="card-panel">
-      <div class="row">
-        <div class="col s6">
-          <strong>Invoice Number:</strong>
-        </div>
-        <div class="col s6">
-          <%= @job_order.bill.invoice_number_display %>
-        </div>
+  <div class="col m3 s12">
+    <div class="row">
+      <div class="col s12">
+        <ul class="collection with-header">
+          <li class="collection-header"><h5>Action</h5></li>
+          <li>
+            <%= link_to "Edit", edit_job_order_path(@job_order), class: "collection-item" %>
+          </li>
+        </ul>
       </div>
-      <div class="row">
-        <div class="col s6">
-          <strong>Invoice Value:</strong>
-        </div>
-        <div class="col s6">
-          <%= @job_order.bill.invoice_value_display %>
-        </div>
-      </div>
-      <hr>
-      <div class="row">
-        <div class="col s6">
-          <strong>Container Number:</strong>
-        </div>
-        <div class="col s6">
-          <%= @job_order.bill.container_number_display %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s6">
-          <strong>Registry Number:</strong>
-        </div>
-        <div class="col s6">
-          <%= @job_order.bill.registry_number_display %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s6">
-          <strong>Port:</strong>
-        </div>
-        <div class="col s6">
-          <%= @job_order.bill.port_display %>
-        </div>
-      </div>
-      <hr>
-      <div class="row">
-        <div class="col s6">
-          <strong>Quantity:</strong>
-        </div>
-        <div class="col s6">
-          <%= @job_order.bill.quantity_display %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s6">
-          <strong>Gross Weight(kg):</strong>
-        </div>
-        <div class="col s6">
-          <%= @job_order.bill.gross_weight_display %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s6">
-          <strong>Chargeable Weight (kg):</strong>
-        </div>
-        <div class="col s6">
-          <%= @job_order.bill.chargeable_weight_display %>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col s6">
-          <strong>Measurement (cbm):</strong>
-        </div>
-        <div class="col s6">
-          <%= @job_order.bill.measurement_display %>
-        </div>
-      </div>
-      <hr>
-      <div class="row">
-        <div class="col s6">
-          <strong>Arrival Date:</strong>
-        </div>
-        <div class="col s6">
-          <%= @job_order.bill.arrival_date_display %>
+    </div>
+    <div class="row">
+      <div class="col s12">
+        <div class="card-panel">
+          <div class="row">
+            <div class="col s6">
+              <strong>Invoice Number:</strong>
+            </div>
+            <div class="col s6">
+              <%= @job_order.bill.invoice_number_display %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s6">
+              <strong>Invoice Value:</strong>
+            </div>
+            <div class="col s6">
+              <%= @job_order.bill.invoice_value_display %>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col s6">
+              <strong>Container Number:</strong>
+            </div>
+            <div class="col s6">
+              <%= @job_order.bill.container_number_display %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s6">
+              <strong>Registry Number:</strong>
+            </div>
+            <div class="col s6">
+              <%= @job_order.bill.registry_number_display %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s6">
+              <strong>Port:</strong>
+            </div>
+            <div class="col s6">
+              <%= @job_order.bill.port_display %>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col s6">
+              <strong>Quantity:</strong>
+            </div>
+            <div class="col s6">
+              <%= @job_order.bill.quantity_display %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s6">
+              <strong>Gross Weight(kg):</strong>
+            </div>
+            <div class="col s6">
+              <%= @job_order.bill.gross_weight_display %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s6">
+              <strong>Chargeable Weight (kg):</strong>
+            </div>
+            <div class="col s6">
+              <%= @job_order.bill.chargeable_weight_display %>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s6">
+              <strong>Measurement (cbm):</strong>
+            </div>
+            <div class="col s6">
+              <%= @job_order.bill.measurement_display %>
+            </div>
+          </div>
+          <hr>
+          <div class="row">
+            <div class="col s6">
+              <strong>Arrival Date:</strong>
+            </div>
+            <div class="col s6">
+              <%= @job_order.bill.arrival_date_display %>
+            </div>
+          </div>
         </div>
       </div>
     </div>
