--- a/app/views/expense_categories/index.html.erb
+++ b/app/views/expense_categories/index.html.erb
@@ -2,8 +2,16 @@
 Expense Categories
 <% end %>
 
-<div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
-  <a href='<%= "#{new_expense_category_path}" %>' class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
+<div class="row">
+  <div class="col m9">
+    <%= render 'shared/categories/index_list', categories: @expense_categories %>
+  </div>
+  <div class="col m3">
+    <ul class="collection with-header">
+      <li class="collection-header"><h5>Action</h5></li>
+      <li>
+        <%= link_to "Add Category", new_expense_category_path, class: "collection-item" %>
+      </li>
+    </ul>
+  </div>
 </div>
-
-<%= render 'index_list' %>
