--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -150,3 +150,21 @@ h1 a i {
 .collection-header h5 {
   font-size: 1.2rem
 }
+
+#login-form-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
+#login-form {
+  position: absolute;
+  width: 350px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  h2 {
+    font-size: 1.2rem;
+  }
+}
