--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -2,10 +2,17 @@
 <html>
 <head>
   <title>SWIFI Login</title>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'application' %>
+  <%= csrf_meta_tags %>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div>
-    <%= yield %>
+  <div id="login-form-wrapper">
+    <div id="login-form" class="card-panel">
+      <%= yield %>
+    </div>
   </div>
 </body>
 </html>
