--- a/app/views/liquidation_form_lines/index.html.erb
+++ b/app/views/liquidation_form_lines/index.html.erb
@@ -2,22 +2,34 @@
 Liquidation Form
 <% end %>
 
-<table class="highlight">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="row">
+  <div class="col m9">
+    <table class="highlight">
+      <thead>
+        <tr>
+          <th>Name</th>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @liquidation_form_lines.each do |liquidation_form_line| %>
-      <tr>
-        <td><%= liquidation_form_line.name %></td>
-        <td><%= link_to 'Show', liquidation_form_line %></td>
-        <td><%= link_to 'Edit', edit_liquidation_form_line_path(liquidation_form_line) %></td>
-        <td><%= link_to 'Destroy', liquidation_form_line, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @liquidation_form_lines.each do |liquidation_form_line| %>
+          <tr>
+            <td><%= liquidation_form_line.name %></td>
+            <td><%= link_to 'Show', liquidation_form_line %></td>
+            <td><%= link_to 'Edit', edit_liquidation_form_line_path(liquidation_form_line) %></td>
+            <td><%= link_to 'Destroy', liquidation_form_line, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="col m3">
+    <ul class="collection with-header">
+      <li class="collection-header"><h5>Action</h5></li>
+      <li>
+        <%= link_to "Add Liquidation Row", new_liquidation_form_line_path, class: "collection-item" %>
+      </li>
+    </ul>
+  </div>
+</div>
