--- a/app/views/liquidation_form_lines/new.html.erb
+++ b/app/views/liquidation_form_lines/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Liquidation Form Line</h1>
+<% content_for :page_title do %>
+New Liquidation Form Line
+<% end %>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', liquidation_form_lines_path %>
