fix search form css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,7 +64,12 @@ header, main, footer {
 }
 
 #search_form {
+  height: 40px;
   line-height: 3rem;
+
+  .input-field {
+    height: 100%;
+  }
 
   .material-icons {
     line-height: 3rem;
